examples/good/03-variables.tx
fun main(): Void {
  var a: Int = 3;
  var b: Bool = true;
  val c: String = "tomato";

  printInt(a);
  printBool(b);
  printString(c);
  
  return;
}
